# bus-bunching

./: README.md  bus_bunching.py  pyproject.toml
data/: 66_bus.csv  9_bus.csv  X9_bus.csv
